# xstore

./: README.md  pyproject.toml  requirements.txt
orco/: collection.py  db.py  executor.py  runtime.py
orco/internals/: dbstore.py  key.py
src/orco/: __init__.py  comp.py  database.py  entry.py  globals.py  ref.py  runtime.py
tests/: conftest.py  test_collections.py  test_compute.py  test_database.py  test_executor.py  test_key.py  test_ref.py  test_runtime.py
