[tool.poetry]
name = "orco"
version = "0.1.0"
description = ""
authors = ["Ada Bohm <ada@kreatrix.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.30"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
